welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:3: error: '(' expected but '{' found.
                                                      else if {((c>=13)&&(c<=19)) {return true} 
                                                              ^hasTeen:4: error: illegal start of simple expression
                                                               else {return false}}} 
                                                                                   ^